feat: make concurrency configurable
The AITL API supports a concurrency parameter for jobs, we want to be
able to use it.
Here we do three things:
 * add support for the new parameter
 * refactor the code of create_job to make it testable
 * test it using unittest (new testenv in tox)
 * remove a non-existing testenv from tox's envlist

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,14 @@
 [tox]
 requires =
     tox>=4
-envlist = py3, lint, type
+envlist = py3, lint
 isolated_build = True
+
+[testenv]
+deps =
+    .[dev]
+commands =
+    python3 -m unittest
 
 [testenv:lint]
 deps =
